<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.login.LoginActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/txt_back"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_main_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/txt_logo"
        android:src="@drawable/camera_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextViewBasic.Title"
        android:text="@string/txt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toBottomOf="@id/iv_main_logo" />


    <TextView
        android:id="@+id/tv_subtitle"
        style="@style/TextViewBasic.Subtitle"
        android:text="@string/login_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_label_email"
        style="@style/TextViewBasic.LabelInput"
        android:text="@string/txt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

    <com.storyapp.ui.components.EmailEditText
        android:id="@+id/ed_login_email"
        style="@style/RoundedEditText"
        android:hint="@string/txt_enter_email"
        android:paddingTop="18dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toBottomOf="@id/tv_label_email" />

    <TextView
        android:id="@+id/tv_label_password"
        style="@style/TextViewBasic.LabelInput"
        android:text="@string/txt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email" />

    <com.storyapp.ui.components.PasswordEditText
        android:id="@+id/ed_login_password"
        style="@style/RoundedEditText"
        android:hint="@string/txt_enter_password"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toBottomOf="@id/tv_label_password" />

    <com.storyapp.ui.components.SolidButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:enabled="false"
        android:padding="16dp"
        android:text="@string/txt_login"
        android:fontFamily="@font/lato_bold"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_login_password" />

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lato"
        android:text="@string/txt_no_account"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/tv_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/txt_register"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_have_account"
        app:layout_constraintStart_toEndOf="@+id/tv_have_account"
        app:layout_constraintTop_toTopOf="@id/tv_have_account" />


    <include
        android:id="@+id/loading_comp"
        layout="@layout/layout_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>