<resources>
    <string name="app_name">Story App</string>
    <string name="txt_desc_story_pic">Story Picture</string>
    <string name="btn_create_story">Create New Story</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="txt_password">Password</string>
    <string name="txt_email">Email</string>
    <string name="txt_enter_password">Enter password</string>
    <string name="txt_enter_email">Enter email address</string>
    <string name="txt_login">Login</string>
    <string name="login_subtitle">Login to continue using the app</string>
    <string name="txt_no_account">Don\'t have an account?</string>
    <string name="txt_register">Register</string>
    <string name="txt_loading">Please Wait…</string>
    <string name="txt_back">Back Button</string>
    <string name="txt_logo">Story Application Logo</string>
    <string name="txt_close">Close</string>
    <string name="register_subtitle">Enter your personal information</string>
    <string name="txt_fullname">Fullname</string>
    <string name="txt_enter_name">Enter your full name</string>
    <string name="txt_have_account">Have an account?</string>
    <string name="txt_app">App</string>
    <string name="txt_story">Story</string>
    <string name="welcome_description">Share your special moments, discover inspiring stories from around the world, and create lasting memories. Connect with friends, express yourself, and explore endless possibilities.</string>
    <string name="welcome_title">Live the moment share the experience</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_just_now">just now</string>
    <string name="txt_a_minutes">a minute ago</string>
    <string name="txt_minutes_ago">%d minute ago</string>
    <string name="txt_an_hour_ago">an hour ago</string>
    <string name="txt_hour_ago">%d hour ago</string>
    <string name="txt_yesterday">yesterday</string>
    <string name="txt_days_ago">%d days ago</string>
    <string name="txt_message_logout">Are you sure you want to log out? You can always return to continue your story.</string>
    <string name="txt_confirm">CONFIRM</string>
    <string name="txt_alert">ALERT</string>
    <string name="txt_unauthorize">You do not have permission to access this page. Please log in to continue.</string>
    <string name="txt_not_found">Data not found. Please try again or check your search keyword</string>
    <string name="txt_server_error">A server error occurred. Please try again later.</string>
    <string name="txt_no_media">No Media Selected</string>
    <string name="txt_granted">Permission request granted</string>
    <string name="txt_denied">Permission request denied</string>
    <string name="txt_image_required">Please upload an image file first.</string>
    <string name="txt_describe">Describe your special moment…</string>
    <string name="txt_new_story">New Story</string>
    <string name="txt_detail_story">Detail Story</string>
    <string name="txt_error">ERROR</string>
    <string name="txt_desc_welcome_illustration">Illustration Welcome Screen</string>
    <string name="txt_uploaded_image">Preview uploaded image</string>
    <string name="email_not_valid">Email address not valid</string>
    <string name="password_required">Password must be at least 8 characters long</string>
    <string name="show_maps">Show Maps</string>
    <string name="title_activity_maps">Detail Maps</string>
    <string name="location_not_found">Location is not found. Try Again</string>
    <string name="txt_retry">Retry</string>
    <string name="share_location">Share My Location</string>
    <string name="txt_network_timeout">Network timeout. Please try again.</string>
    <string name="txt_network_error">Network error. Please check your connection.</string>
    <string name="txt_unexpected_error">An unexpected error occurred.</string>
</resources>