<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_maps"
        android:icon="@drawable/baseline_map_32"
        android:title="@string/show_maps"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/logout"
        android:title="@string/txt_logout"
        app:showAsAction="always" />
</menu>