...
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="4"
        tools:listitem="@layout/item_story_list" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_create_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/light_blue"
        android:contentDescription="@string/btn_create_story"
        android:src="@drawable/baseline_add_24"
...
